--- a/views/home.twig
+++ b/views/home.twig
@@ -144,6 +144,7 @@
             Testje
         </div>
     </div>
+    <svg id="timeline" class="hidden-sm hidden-xs noselect"></svg>
 </div>
 <script type="text/javascript">
     initGeoSearch({{layers|json_encode|raw}});
