--- a/web/style/style.css
+++ b/web/style/style.css
@@ -131,7 +131,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     color: transparent;
 }
 
-.layers:hover, .layers:hover a {
+.layers, .layers a {
     color: white;
 }
 
@@ -462,4 +462,32 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     stroke: #fff;
     fill-opacity: .125;
     shape-rendering: crispEdges;
+}
+
+@media screen and (min-width: 991px) {
+    #info, #leg, .layers {
+        display: block;
+    }
+
+    .layers {
+        background-image: none;
+        background-color: rgb(37, 42, 58);
+        max-height: 70vh;
+        top: initial;
+        left: initial;
+    }
+
+    .layers, .legende {
+        width: 240px;
+        height: auto;
+        overflow-y: auto;
+        z-index: 1;
+        position: relative;
+
+    }
+
+    /* Legende */
+    .layers + .legende {
+        display: none;
+    }
 }
