--- a/views/home.twig
+++ b/views/home.twig
@@ -123,6 +123,19 @@
             {% endfor %}
         </div>
     </div>
+    <div class="timeline-legende">
+        <ol>
+            <li class="nieuwste-tijd">Nieuwste Tijd</li>
+            <li class="nieuwe-tijd">Nieuwe Tijd</li>
+            <li class="middeleeuwen">Middeleeuwen</li>
+            <li class="romeinse-tijd">Romeinse Tijd</li>
+            <li class="ijzertijd">Ijzertijd</li>
+            <li class="bronstijd">Bronstijd</li>
+            <li class="einde-neolithicum">Einde Neolithicum</li>
+            <li class="begin-neolithicum">Begin Neolithicum</li>
+            <li class="paleolithicum">Paleolithicum</li>
+        </ol>
+    </div>
     <span id="map" class="map"></span>
 
     <span id="ol.control.Zoom" class="ol.control.Zoom"></span>
