--- a/views/home.twig
+++ b/views/home.twig
@@ -123,7 +123,7 @@
             {% endfor %}
         </div>
     </div>
-    <div class="timeline-legende">
+    <div id="timeline-legende">
         <ol>
             <li class="nieuwste-tijd">Nieuwste Tijd</li>
             <li class="nieuwe-tijd">Nieuwe Tijd</li>
