--- a/web/style/style.css
+++ b/web/style/style.css
@@ -541,7 +541,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     color: black;
 }
 
-.timeline-legende {
+#timeline-legende {
     position: relative;
     width: 240px;
     left: 30px;
