--- a/web/style/style.css
+++ b/web/style/style.css
@@ -449,6 +449,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     bottom: 160px;
     left: 100px;
     font: 10px sans-serif;
+    font-size: 13px;
 }
 
 .axis path,
