--- a/web/style/style.css
+++ b/web/style/style.css
@@ -450,6 +450,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     left: 100px;
     font: 10px sans-serif;
     font-size: 13px;
+    font-weight: bold;
 }
 
 .axis path,
