--- a/web/style/style.css
+++ b/web/style/style.css
@@ -461,7 +461,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
 }
 
 .brush .extent {
-    stroke: #fff;
+    stroke: black;
     fill-opacity: .125;
     shape-rendering: crispEdges;
 }
