Fix legend not disappearing

--- a/views/home.twig
+++ b/views/home.twig
@@ -145,7 +145,7 @@
         {% endfor %}
     </span>
 
-    <div class="legende hidden-sm hidden-xs display-none noselect" id="leg">
+    <div class="legende hidden-sm hidden-xs noselect" id="leg">
         <div id="depthpoint_box">
             <h5>Diepte</h5>
             <div id="info-depth">
