--- a/views/home.twig
+++ b/views/home.twig
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav navbar-left">
-                <li id="legende_knop" class="popupHoverElement" title="Legende">
+                <li id="legende_knop" class="popupHoverElement legend-visible" title="Legende">
                     <div class="two icon">Legende</div>
                 </li>
                 <li id="insert-link" class="popupHoverElement" title="Toevoegen">
