--- a/web/style/style.css
+++ b/web/style/style.css
@@ -449,7 +449,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
 }
 
 
-.selected-drawer {
+.selected-drawer:not(#legende_knop), .legend-visible {
     background-color: grey;
 }
 
