--- a/views/home.twig
+++ b/views/home.twig
@@ -85,7 +85,8 @@
                     </a>
                 </li>
                 <li id="question-link" class="popupHoverElement" title="Handleiding">
-                    <div class="two icon">Handleiding</div>
+                    <div class="two icon">
+                        <a href="http://www.sea-arch.be/nl" target="_blank">Handleiding</a></div>
                 </li>
                 <li id="draw-link" class="popupHoverElement" title="Tekenen">
                     <div class="two icon">Tekenen</div>
