--- a/web/style/style.css
+++ b/web/style/style.css
@@ -66,6 +66,12 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     width: 20px;
 }
 
+
+.popupHoverElement {
+    cursor: pointer;
+    cursor: hand;
+}
+
 #output .icon {
     background-image:  url('../images/Geef info.png');
 }
