--- a/web/style/style.css
+++ b/web/style/style.css
@@ -217,7 +217,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
 }
 
 /* Legende */
-.layers:hover + .legende, .display-none {
+.display-none {
     display: none !important;
 }
 
