Change polygon title to 'selectie'

--- a/views/home.twig
+++ b/views/home.twig
@@ -64,7 +64,7 @@
                 <li id="output" class="popupHoverElement" title="Relaties">
                     <div class="two icon">Relaties</div>
                 </li>
-                <li id="polygon-link" class="popupHoverElement" title="Polygon">
+                <li id="polygon-link" class="popupHoverElement" title="Selectie">
                     <div class="two icon">Polygon</div>
                 </li>
             </ul>
