--- a/web/style/style.css
+++ b/web/style/style.css
@@ -427,6 +427,8 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     color: white;
     background-color: blue;
     cursor: pointer;
+    margin-left: 275px;
+    margin-right: 475px;
 }
 
 #reference-container {
