--- a/web/style/style.css
+++ b/web/style/style.css
@@ -437,6 +437,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
 #reference-container {
     position: fixed;
     bottom: 0;
+    z-index: 1001;
 }
 
 #reference-content {
