Rename Search button

--- a/views/home.twig
+++ b/views/home.twig
@@ -53,7 +53,7 @@
                     <div class="two icon">Legende</div>
                 </li>
                 <li id="search-link" class="popupHoverElement" title="Zoeken">
-                    <div class="two icon">Zoek</div>
+                    <div class="two icon">Zoek node</div>
                 </li>
                 <li id="info-link" class="popupHoverElement" title="Info">
                     <div class="two icon">Info</div>
