Color bronstijd violet

--- a/web/style/style.css
+++ b/web/style/style.css
@@ -548,8 +548,8 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
 }
 
 .bronstijd {
-    fill: yellow;
-    color: yellow;
+    fill: violet;
+    color: violet;
 }
 
 .einde-neolithicum {
