--- a/views/home.twig
+++ b/views/home.twig
@@ -53,16 +53,16 @@
                     <div class="two icon">Legende</div>
                 </li>
                 <li id="search-link" class="popupHoverElement" title="Zoeken">
-                    <div class="two icon">Zoek node</div>
+                    <div class="two icon">Zoek in database</div>
                 </li>
                 <li id="info-link" class="popupHoverElement" title="Info">
                     <div class="two icon">Info</div>
                 </li>
                 <li id="output" class="popupHoverElement" title="Relaties">
-                    <div class="two icon">Relaties</div>
+                    <div class="two icon">Geef relaties</div>
                 </li>
                 <li id="polygon-link" class="popupHoverElement" title="Selectie">
-                    <div class="two icon">Polygon</div>
+                    <div class="two icon">Selectie via polygon</div>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
