--- a/web/style/style.css
+++ b/web/style/style.css
@@ -468,7 +468,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     background-color: grey;
 }
 
-#timeline {
+#timeline-wrapper {
     position: absolute;
     bottom: 170px;
     left: 100px;
