Change depthprofiling title

--- a/views/home.twig
+++ b/views/home.twig
@@ -66,7 +66,7 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li id="depth-link" class="popupHoverElement" title="Diepteprofiel">
+                <li id="depth-link" class="popupHoverElement" title="Duid twee punten aan">
                     <div class="two icon">Diepteprofiel</div>
                 </li>
                 <li id="share-link" class="popupHoverElement" title="Delen">
