--- a/views/home.twig
+++ b/views/home.twig
@@ -83,7 +83,7 @@
                 </li>
                 <li id="question-link" class="popupHoverElement" title="Handleiding">
                     <div class="two icon">
-                        <a href="http://www.sea-arch.be/nl" target="_blank">Handleiding</a></div>
+                        <a href="http://www.sea-arch.be/nl" target="_blank">Search project</a></div>
                 </li>
                 <li id="measure-link" class="popupHoverElement" title="Meten">
                     <div class="two icon">Meten</div>
