--- a/views/home.twig
+++ b/views/home.twig
@@ -184,7 +184,7 @@
     <div id="layer-info-container" class="layer-panel hidden-xs hidden-sm">
         <div id="layer-info-content"></div>
     </div>
-    <div id="timeline-wrapper">
+    <div id="timeline-wrapper" title="Momenteel werkt de tijdbalk niet voor negatieve waarden.">
         <div>
             Selecteer periode
         </div>
