--- a/web/style/style.css
+++ b/web/style/style.css
@@ -575,3 +575,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
     margin-left: 5px;
     border-bottom: 1px solid #bbb;
 }
+
+.logo-icon {
+    height: 30px;
+}
